--- a/src/app/EspaceMedecin/inscrire/inscrire.component.html
+++ b/src/app/EspaceMedecin/inscrire/inscrire.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="card all-content">
+<div class="card all-content" style="margin-top: 5rem">
   <div class="zoneRouge">
     <h6>Cette inscription et seulement pour les medecins  ! </h6>
   </div>
