--- a/src/app/EspacePatient/profile-patient/profile-patient.component.html
+++ b/src/app/EspacePatient/profile-patient/profile-patient.component.html
@@ -39,7 +39,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)" routerLink="/messagesfromAdmin" routerLinkActive="active">
-          <i class="bi bi-envelope-fill "  style="color: white"></i>Message
+          <i class="bi bi-envelope-fill "  style="color: white"></i>Notification
         </a>
       </li>
       <li class="nav-item">
@@ -105,19 +105,10 @@
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                  aria-labelledby="userDropdown">
-              <a class="dropdown-item" href="#">
-                <i class="bi bi-person-fill mr-2 text-gray-400"></i>
-                Profile
-              </a>
-              <a class="dropdown-item" href="#">
-                <i class="bi bi-gear-fill mr-2 text-gray-400"></i>
-                Settings
-              </a>
 
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" (click)="logOut()">
                 <i class="bi bi-box-arrow-right mr-2 text-gray-400"></i>
-                Logout
+                Déconnexion
               </a>
             </div>
           </li>
