--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 <div class="container-fluid section " style="margin-top: -8rem">
-  <div class="container-fluid doctorBg">
-    <img src="../assets/image/bcgdoctor.png">
-    <div class="card info">
-      <h1> Votre santé est
+  <div class="container-fluid doctorBg" style="margin-top: 5rem">
+    <img src="../assets/image/bcgdoctor.png" style="margin-top: 6rem">
+    <div class="card info" >
+      <h1 style="margin-top: 4rem">  Votre santé est
         notre priorité
       </h1>
 
@@ -45,10 +45,16 @@
 
 <div class=" card sectoin3">
 <h1>Séjour Médical</h1>
+  <div style="width: 100%;height: auto;display: flex;flex-wrap: wrap; justify-content: center;margin-top: 1rem">
   <div class="imgclnq">
     <img src="../assets/image/cliniqueù.jfif">
+  </div> <div class="imgclnq">
+    <img src="../assets/image/AdobeStock_108994535_Preview.jpeg">
+  </div> <div class="imgclnq">
+    <img src="../assets/image/AdobeStock_172745118_Preview.jpeg">
   </div>
-  <div class="divp">
+  </div>
+  <div class="divp" style="margin-top: 4rem;font-size: 21px">
   <p>
     Spécialisée dans le tourisme médical à l’étranger, notre plateforme-web  prend en charge la totalité</p>
    <p> de votre séjour médical en Tunisie, pour votre type de chirurgie </p>
