--- a/src/app/apropos/apropos.component.html
+++ b/src/app/apropos/apropos.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<section class="aboutUs">
+<section class="aboutUs" style="margin-top: 6rem">
   <h2>Pourquoi nous choisir </h2>
   <div class="main">
     <div class="img">
