--- a/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/detail-profile/detail-profileA/dashboard-admin/dashboard-admin.component.html
@@ -24,7 +24,7 @@
 
               </div>
               <div class="flip-card-back" >
-                <h4>Chirurgie la plus requise:</h4>
+                <h4>Chirurgie la plus recommandé:</h4>
                 <h4 style="color: #2e59d9">" {{name}} "</h4>
                 <h5><b style="color: #2e59d9" >{{count}}</b> patients qui  choisissent cette chirurgie.</h5>
               </div>
@@ -38,7 +38,7 @@
 
               </div>
               <div class="flip-card-back">
-                <h4>Médecin le plus requis</h4>
+                <h4>Médecin le plus recommandé</h4>
                 <h4 style="color: #2e59d9"> " {{d_firstname}} {{d_lastname}} "</h4>
                 <h5><b style="color: #2e59d9" >{{d_count}}</b> rendez-vous  choisissent ce Médecin.</h5>
                 <p>{{d_specialite}}</p>
