--- a/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
+++ b/src/app/detail-profile/detail-profileM/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
       </div>
 
       <!-- Bar Chart -->
-      <div class="card shadow mb-4">
+      <div class="card shadow mb-4" style="height: 32rem">
         <div class="card-header py-3">
           <h6 class="m-0 font-weight-bold text-primary">Nombres des patients Female, Male, Total</h6>
         </div>
@@ -50,22 +50,6 @@
     </div>
 
     <!-- Donut Chart -->
-    <div class="col-xl-4 col-lg-5">
-      <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
-        <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">Donut Chart</h6>
-        </div>
-        <!-- Card Body -->
-        <div class="card-body">
-          <div class="chart-pie pt-4">
-            <canvas id="myPieChart"></canvas>
-          </div>
-          <hr>
-          Styling for the donut chart
-        </div>
-      </div>
-    </div>
   </div>
 
 </div>
