--- a/src/app/servicePatient/chirurgies/chirurgies.component.html
+++ b/src/app/servicePatient/chirurgies/chirurgies.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="card all-card">
+<div class="card all-card" style="margin-top: 6rem">
   <h1> Tous Nos Services Chirurgicaux</h1>
 
   <div class="card align-content-center one-card"  style="margin-top: 1rem" *ngFor="let chirurgie of ModelChirurgie">
