--- a/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
+++ b/src/app/servicePatient/detail-parcours-medc/detail-parcours-medc.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="col allCard>"  *ngIf="medecin">
+<div class="col allCard" style="margin-top: 5rem !important;" *ngIf="medecin">
 
   <div class="image">
     <img src="{{medecin.image}}">
