--- a/src/app/acceuil-content/acceuil-content.component.scss
+++ b/src/app/acceuil-content/acceuil-content.component.scss
@@ -29,7 +29,7 @@
 .doctorBg{
   //border: 1px solid black;
   width: 100%;
-  height: 48rem;
+  height: 42rem;
   float: right;
   margin-top: 5rem;
 }
@@ -154,7 +154,7 @@
   height: 16rem;
   text-align: center;
   border-radius: 15px;
-  margin: auto;
+  margin-left: 1rem;
 }
 .imgclnq:hover{
     opacity: 30%;
