--- a/src/app/detail-profile/detail-profileP/detail-rdv-patient/detail-rdv-patient.component.html
+++ b/src/app/detail-profile/detail-profileP/detail-rdv-patient/detail-rdv-patient.component.html
@@ -1,40 +1,51 @@
 <div  style=" margin-left: 1rem; margin-right: 1rem;">
   <div class="col" style="width: 100%; height: auto;">
-    <div class="row" *ngIf="apntmnt" style="margin-top: 1rem;">
+    <div class="row" *ngIf="apntmnt" style="margin-top: 2rem;">
+      <div style="float: left;">
+        <h3 style="color: #0066FF;">{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</h3>
+        <h5 style="color: #3F6589;">{{apntmnt.surgery.name}}</h5>
+      </div>
+      <div style="float: right;">
+        <span style="color: #0066FF; margin-top: 1rem;">Email:</span>
+        <p>{{apntmnt.patient.email}}</p>
+      </div>
+      <div style="float: right;">
+        <span style="color: #0066FF;">Date de rendez-vous:</span>
+        <h6 style="font-weight: bold;">{{apntmnt.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}  <span> <i class="bi bi-calendar-date-fill" style="color: indianred ;"></i></span></h6>
 
+
+      </div>
     </div>
 
     <section class="row" style="display: flex; flex-wrap: wrap; width: 100%; height: auto">
-
-      <div style="width: 100% !important; height: auto">
+      <div style="width: auto; height: auto" >
         <h5 style="margin-top: 1rem; color: #0066FF">Informations générales</h5>
         <table>
-          <tr >
-            <th style="color: #336DA5;" >Nom et Prenom</th>
-            <th style="color: #336DA5;">Email</th>
-            <th style="color: #336DA5;">Téléphone</th>
-            <th style="color: #336DA5;">Ville</th>
-            <th style="color: #336DA5;">Age</th>
-            <th style="color: #336DA5;">Poids</th>
-            <th style="color: #336DA5;">Type de chirugie</th>
-            <th style="color: #336DA5;">Date de rendez-vous</th>
-
+          <tr>
+            <td><span style="color: #336DA5;">Age:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.age}} ans</h6></td>
+            <td><span style="color: #336DA5;">Ville:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.ville}}</h6></td>
           </tr>
           <tr>
-            <td>{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</td>
-            <td>{{apntmnt.patient.email}}</td>
-            <td>{{apntmnt.phone}}</td>
-            <td>{{apntmnt.ville}}</td>
-            <td>{{apntmnt.age}} ans </td>
-            <td>{{apntmnt.weight}} Kg</td>
-            <td>{{apntmnt.surgery.name}} </td>
-            <td>{{apntmnt.dateRDV | date: 'yyyy-MM-dd / hh:mm a'}}  </td>
-
-
-
+            <td><span style="color: #336DA5;">Poids:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.weight}} Kg</h6></td>
+            <td><span style="color: #336DA5;">Type de sang:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.typeSang}}</h6></td>
+          </tr>
+          <tr>
+            <td><span style="color: #336DA5;">Téléphone:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.phone}}</h6></td>
+            <td><span style="color: #336DA5;">Alcoolique:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.alcoolique}}</h6></td>
+          </tr>
+          <tr>
+            <td><span style="color: #336DA5;">Fumee:</span></td>
+            <td><h6 style="font-weight: bold;">{{apntmnt.fumee}}</h6></td>
           </tr>
         </table>
       </div>
+
       <div style="width: auto; height: auto">
         <h5 style="margin-top: 1rem; color: #0066FF">Diabéte</h5>
         <table>
@@ -48,7 +59,7 @@
             <td>{{apntmnt.mesureDiabete}}</td>
 
             <td>
-              <a (click)="openImage(apntmnt.analyseDiabete)">
+              <a >
                 <img src="{{apntmnt.analyseDiabete}}" style="width: 5rem; height: 5rem">
               </a>
 
@@ -73,7 +84,6 @@
 
         </table>
       </div>
-
       <div style="width: auto; height: auto">
         <h5 style="margin-top: 2rem; color: #0066FF">Autre Maladie</h5>
         <table>
@@ -88,7 +98,7 @@
             <td>{{apntmnt.desAutreMaladie}}</td>
 
             <td [style.display]="apntmnt.analyseAutreMaladie ? 'block' : 'none'" >
-              <a (click)="openImage(apntmnt.analyseAutreMaladie)" >
+              <a >
                 <img   src="{{apntmnt.analyseAutreMaladie}}" style="width: 5rem; height: 5rem" >
               </a>
 
@@ -111,7 +121,7 @@
             <td>{{apntmnt.ancienOperation}}</td>
             <td>{{apntmnt.nomAncienOperation}}</td>
             <td>
-              <a (click)="openImage(apntmnt.analyseAncienOperation)">
+              <a >
                 <img src="{{apntmnt.analyseAncienOperation}}" style="width: 5rem; height: 5rem">
               </a>
 
@@ -130,38 +140,21 @@
 
 
 
-  <div style="width: auto; height: auto; display: flex ; background-color: white; margin-top: 1rem;margin-left: 1rem;border-top: 1px solid #1DA1F2">
+  <div style="width: auto; height: auto; display: flex">
     <div class="card contentimg">
-      <h5 style="color: #0066FF;">Analyse de chirurgie</h5>
+      <h4 style="color: #0066FF;">Analyse de chirurgie</h4>
 
       <div class="image">
-        <a (click)="openImage(apntmnt.image)">
-          <img src="{{apntmnt.image}}" >
-        </a>
-
+        <img src="{{apntmnt.image}}" >
       </div>
     </div>
 
-    <div class="card contentimg" style="margin-left: 2rem ; " >
-      <h5 style="color: #0066FF;">Autre Analyse de chirurgie</h5>
+    <div class="card contentimg" style="margin-left: 2rem">
+      <h4 style="color: #0066FF;">Autre Analyse de chirurgie</h4>
 
       <div class="image">
-        <a (click)="openImage(apntmnt.autreAnalyse)">
         <img src="{{apntmnt.autreAnalyse}}">
-        </a>
       </div>
     </div>
   </div>
 </div>
-<div style="margin-left: 2rem">
-  <h5>Prix de l'operation : </h5>
-  <form [formGroup]="DevisForm" >
-    <input type="number" style="width: 30rem;height: 2rem;border-radius: 8px; padding-left: 1rem" formControlName="cost">
-  </form>
-</div>
-<div class="row btns">
-  <button class="btn1">Rejeter</button>
-  <button class="btn2" type="submit"  (click)="Valider(apntmnt.id)">Valider</button>
-</div>
-
-
