--- a/src/app/detail-profile/detail-profileA/rendez-vous/messages-med/messages-med.component.scss
+++ b/src/app/detail-profile/detail-profileA/rendez-vous/messages-med/messages-med.component.scss
@@ -18,7 +18,7 @@ h5, h3{
 
 }
 .one-card{
-  background-color: #FFF9F3;
+  background-color: #EAF9F8;
   text-align: justify;
   width: 35rem;
   height: 14rem;
