--- a/src/app/acceuil-content/acceuil-content.component.html
+++ b/src/app/acceuil-content/acceuil-content.component.html
@@ -54,9 +54,10 @@
     <img src="../assets/image/AdobeStock_172745118_Preview.jpeg">
   </div>
   </div>
-  <div class="divp" style="margin-top: 4rem;font-size: 21px">
-  <p>
-    Spécialisée dans le tourisme médical à l’étranger, notre plateforme-web  prend en charge la totalité</p>
+
+  <div class="divp" style="margin-top: 4rem;color: #001B35 !important; font-size: 20px !important; font-weight:400">
+
+  <p>Spécialisée dans le tourisme médical à l’étranger, notre plateforme-web  prend en charge la totalité</p>
    <p> de votre séjour médical en Tunisie, pour votre type de chirurgie </p>
 
 </div>
