--- a/src/app/detail-profile/detail-profileA/rendez-vous/messages-med/messages-med.component.html
+++ b/src/app/detail-profile/detail-profileA/rendez-vous/messages-med/messages-med.component.html
@@ -1,25 +1,17 @@
 <div class="col all-content">
-  <h5>Messages</h5>
+  <h5>Rendez-vous avec devis</h5>
   <div class="card all-card">
-    <div class="card one-card shadow-sm p-3 mb-5 bg-#FFF9F3rounded">
-      <h3>Aminata Diango</h3>
-      <h6 style="margin-top: 1rem">Chirurgie des valves cardiaque </h6>
-      <h6 style="font-weight: bold">20.03.2023
+    <div class="card one-card shadow-sm p-3 mb-5 bg-#FFF9F3rounded" *ngFor="let apntmnt of appointmentRes">
+      <h3>{{apntmnt.patient.firstname}} {{apntmnt.patient.lastname}}</h3>
+      <h6 style="margin-top: 1rem">{{apntmnt.surgery.name}}</h6>
+      <h6 style="font-weight: bold">{{apntmnt.dateRDV | date}}
         <span><i class="bi bi-calendar-date-fill" style="color: indianred ; float: right ;"></i></span>
       </h6>
       <div class="btn">
-        <button  onclick="window.location.href ='detailMsgPatient';">Voir detail</button>
+        <button type="submit"  (click)="details(apntmnt.id)">Voir detail</button>
       </div>
     </div>
 
-    <div class="card one-card shadow-sm p-3 mb-5 bg-#FFF9F3 rounded">
-      <h3>Aminata Diango</h3>
-      <h6>Chirurgie des valves cardiaque </h6>
-      <h6 style="font-weight: bold">20.03.2023</h6>
-      <div class="btn">
-        <button  onclick="window.location.href ='detailMsgPatient';">Voir detail</button>
-      </div>
-    </div>
 
 
   </div>
