--- a/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
+++ b/src/app/detail-profile/detail-profileP/liste-rendez-vous/liste-rendez-vous.component.html
@@ -17,12 +17,13 @@
         </div>
 
       </div>
-      <div class="col col-3" data-label="Status">
-        <p *ngIf="rdv.status === 'IN_PROGRESS'">Votre Demande est en attente <i class="bi bi-circle-fill" style="color: orange ; font-size:10px"></i></p>
+      <div  class="col col-3" data-label="Status">
+        <p *ngIf="rdv.status === 'IN_PROGRESS'">Votre Demande a été crée avec la sélection d'un médecin<i class="bi bi-circle-fill" style="color: orange ; font-size:10px"></i></p>
         <p *ngIf="rdv.status === 'ACCEPTED'">Votre Demande est acceptée <i class="bi bi-circle-fill" style="color: green ; font-size:10px"></i>
-        <br>  <i>vous serez bientot informé du reste des informations.</i></p>
+        <br>  <i>En attendant que la prix d'opération soit déterminé</i></p>
         <p *ngIf="rdv.status === 'REJECTED'">Votre demande a été rejetée <i class="bi bi-circle-fill" style="color: red ; font-size:10px"></i></p>
-        <p *ngIf="rdv?.status === 'CREATED'">Votre demande a été créé <i class="bi bi-circle-fill" style="color: blue ; font-size:10px"></i></p>
+        <p *ngIf="rdv?.status === 'CREATED'">Votre demande a été créé sans sélectionner de médecin <i class="bi bi-circle-fill" style="color: blue ; font-size:10px"></i></p>
+        <p *ngIf="rdv?.status === 'WITH_DEVIS' ">Votre rendez-vous est terminé, en attente de votre confirmation<i class="bi bi-circle-fill" style="color: greenyellow ; font-size:10px"></i></p>
 
       </div>
 
@@ -44,6 +45,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item"  (click)="voirDetail(rdv.id)"> <i class="bi bi-eye-fill" style="color: #3F6589"></i>  Voir Détails</a>
           <a  class="dropdown-item" (click)="modifier(rdv.id)" *ngIf="rdv.status === 'IN_PROGRESS' " ><i class="bi bi-pencil-square"  style="color: #3F6589"></i> Modifier</a>
+          <a  class="dropdown-item" (click)="confirmerRdv(rdv.id)" *ngIf="rdv.status === 'WITH_DEVIS' " ><i class="bi bi-pencil-square"  style="color: #3F6589"></i> Confirmer</a>
 
         </div>
       </div>
