--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,18 @@
 @import '../node_modules/alertifyjs/build/css/alertify.css';
 @import "../node_modules/alertifyjs/build/css/themes/bootstrap.css";
 @import "../node_modules/alertifyjs/build/css/themes/default.css";
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 body{
-  font-family: "Dosis" !important;
-  color: #001B35 !important;
+  font-family: 'Dosis' !important;
+  color: #001B35!important;
+  line-height: 20;
+  font-weight: 400 !important;
+  font-size: 16px !important;
 }
+
 a:hover{
   color: #0066FF !important;
   cursor: pointer;
